added table and content to contact

--- a/html_personal_site/index.html
+++ b/html_personal_site/index.html
@@ -7,11 +7,17 @@
 </head>
 
 <body>
-  <img src="images/profile_pic_circle.png" alt="umesh's profile picture">
-  <h1>Umesh Ramsaroop</h1>
-  <p><em>Learning how to be a web developer.</em></p>
-  <p>Hi! My name is Umesh. I am 32 years old and I am learning to code. <br>
-    I think it's pretty cool to create something out of nothing!</p>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="images/profile_pic_circle.png" alt="umesh's profile picture"></td>
+      <td>
+        <h1>Umesh Ramsaroop</h1>
+        <p><em>Learning how to be a web developer.</em></p>
+        <p>Hi! My name is Umesh. I am 32 years old and I am learning to code. <br>
+          I think it's pretty cool to create something out of nothing!</p>
+      </td>
+    </tr>
+  </table>
   <hr>
   <h3>My favorite books</h3>
   <ul>
@@ -20,6 +26,43 @@
     <li><a href="https://en.wikipedia.org/wiki/The_Richest_Man_in_Babylon">The Richest Man in Babylon</a></li>
     <li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Half-Blood_Prince">Harry Potter and the Half Blood Prince</a></li>
   </ul>
+  <hr>
+  <h3>Work Experience</h3>
+  <table cellspacing="10">
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2018 - Present</td>
+        <td>Associate Platform Engineer</td>
+      </tr>
+      <tr>
+        <td>2014 - 2018</td>
+        <td>IT Operations Engineer</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <h3>Skills</h3>
+  <table cellspacing="10">
+    <tr>
+      <td>Git</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Jenkins</td>
+      <td>⭐⭐</td>
+    </tr>
+    <tr>
+      <td>SaltStack</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>
+  </table>
+  <hr>
   <a href="hobbies.html">My Hobbies</a>
   <br>
   <a href="contact.html">Contact</a>
