--- a/html_personal_site/contact.html
+++ b/html_personal_site/contact.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <p>Please feel free to contact me at spamsohard1988@gmail.com</p>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+
+<body>
+  <h1>My Contact Details</h1>
+  <p>My Fictional Address</p>
+  <p>9175551234</p>
+  <p>myemail@gmail.com</p>
+</body>
+
 </html>
