--- a/html_personal_site/contact.html
+++ b/html_personal_site/contact.html
@@ -11,6 +11,17 @@
   <p>My Fictional Address</p>
   <p>9175551234</p>
   <p>myemail@gmail.com</p>
+  <hr>
+  <form action="mailto:umesh.ramsaroop@gmail.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value=""><br>
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail" value=""><br>
+    <label>Your Message:</label><br>
+    <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+    <input type="submit" name="">
+  </form>
+
 </body>
 
 </html>
