--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
       <td>
         <h1>Umesh Ramsaroop</h1>
         <p><em>Learning how to be a web developer.</em></p>
-        <p>Hi! My name is Umesh. I am 32 years old and I am learning to code. <br>
-          I think it's pretty cool to create something out of nothing!</p>
+        <p>Hi! My name is Umesh. I am 32 years old and I'm learning front end development.</p>
       </td>
     </tr>
   </table>
