--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
 <head>
   <meta charset="utf-8">
   <title>Umesh's Personal Site</title>
+
+  <style >
+
+    body {
+      background-color: #e7e7de;
+    }
+
+    hr {
+      border-style: dotted none none none;
+      border-color: #008891;
+      border-width: 5px;
+      width: 3%;
+
+    }
+
+
+
+  </style>
+
 </head>
 
 <body>
