color changes to css

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Umesh's Contact Info</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -21,6 +22,9 @@
     <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
     <input type="submit" name="">
   </form>
+
+  <hr>
+  <a href="index.html">Home</a>
 
 </body>
 
