--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Umesh's Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3>My Hobbies</h3>
@@ -12,5 +13,8 @@
       <li>Hiking</li>
       <li>Gaming</li>
     </ol>
+
+    <hr>
+    <a href="index.html">Home</a>
   </body>
 </html>
