--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Umesh's Personal Site</title>
-
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
