--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </tr>
   </table>
   <hr>
-  <h3>My favorite books</h3>
+  <h3>My Favorite Books</h3>
   <ul>
     <li><a href="https://en.wikipedia.org/wiki/How_to_Win_Friends_and_Influence_People">How to Win Friends and Influence People</a></li>
     <li><a href="https://en.wikipedia.org/wiki/The_Alchemist_(novel)">The Alchemist</a></li>
