--- a/index.html
+++ b/index.html
@@ -3,68 +3,70 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Umesh's Personal Site</title>
+  <title>Umesh Ramsaroop</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Acme&family=Ubuntu:wght@300&family=Yusei+Magic&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/profile_pic_circle.png" alt="umesh's profile picture"></td>
-      <td>
-        <h1>Umesh Ramsaroop</h1>
-        <p><em>Learning how to be a web developer.</em></p>
-        <p>Hi! My name is Umesh. I am 32 years old and I'm learning front end development.</p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h3>My Favorite Books</h3>
-  <ul>
-    <li><a href="https://en.wikipedia.org/wiki/How_to_Win_Friends_and_Influence_People">How to Win Friends and Influence People</a></li>
-    <li><a href="https://en.wikipedia.org/wiki/The_Alchemist_(novel)">The Alchemist</a></li>
-    <li><a href="https://en.wikipedia.org/wiki/The_Richest_Man_in_Babylon">The Richest Man in Babylon</a></li>
-    <li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Half-Blood_Prince">Harry Potter and the Half Blood Prince</a></li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2018 - Present</td>
-        <td>Associate Platform Engineer</td>
-      </tr>
-      <tr>
-        <td>2014 - 2018</td>
-        <td>IT Operations Engineer</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>Git</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Jenkins</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>SaltStack</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-  </table>
-  <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="contact.html">Contact</a>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloudy.png" alt="cloud-img">
+    <h1>Hey! I'm Umesh</h1>
+    <p>an infrastructure engineer who wants to dabble in web development</p>
+    <img class="plane" src="images/plane.png" alt="cloud-img">
+    <img class="pic" src="images/mountain3.png" alt="cloud-img">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="pic2" src="images/boy.png" alt="profile-pic">
+      <h2>About Me</h2>
+      <p class="description">I'm a tech-savvy professional with 10 years of experience in overseeing critical deployments, developing/supporting infrastructure for users, and creating automated procedures in fast-paced environments. This also
+        includes my passion for
+        devops -- promoting the culture wherever applicable.
+      </p>
+    </div>
+    <div class="skills">
+      <h2>My Skills</h2>
+      <div class="skill-table">
+        <img class="mouse" src="images/computer-mouse.png" alt="mouse">
+        <img class="server" src="images/server.png" alt="server">
+        <table class="table">
+          <thead>
+            <th>CI/CD:</th>
+            <td style="text-align:right">Docker, Kubernetes, Git, Jenkins, Ansible, SaltStack</td>
+          </thead>
+          <thead>
+            <th>Cloud:</th>
+            <td style="text-align:right">Microsoft Azure, Google Cloud Platform, AWS</td>
+          </thead>
+          <thead>
+            <th>Languages:</th>
+            <td style="text-align:right">Bash, Python, YAML, Jinja2, Groovy</td>
+          </thead>
+          <thead>
+            <th>CDN:</th>
+            <td style="text-align:right">Fastly, Akamai</td>
+          </thead>
+          <thead>
+            <th>Monitoring:</th>
+            <td style="text-align:right">SumoLogic, AppDynamics</td>
+          </thead>
+        </table>
+      </div>
+    </div>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <p>Feel free to contact me. Always willing to work on a new project!</p>
+      <a class="footer-link" href="https://www.linkedin.com/in/umesh-ramsaroop-71a55bb5/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/jdm_ninja">Twitter</a>
+      <a class="footer-link" href="https://www.instagram.com/iinfamous_r.py/">Instagram</a>
+      <a class="btn" href="mailto:spamsohard1988@gmail.com">Email</a>
+      <p>© 2021 Umesh Ramsaroop</p>
+    </div>
+  </div>
+
 </body>
 
 </html>
