--- a/index.html
+++ b/index.html
@@ -56,17 +56,15 @@
         </table>
       </div>
     </div>
-    <!
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <p>Feel free to contact me. Always willing to work on a new project!</p>
-      <a class="footer-link" href="https://www.linkedin.com/in/umesh-ramsaroop-71a55bb5/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/jdm_ninja">Twitter</a>
-      <a class="footer-link" href="https://www.instagram.com/iinfamous_r.py/">Instagram</a>
-      <a class="btn" href="mailto:spamsohard1988@gmail.com">Email</a>
-      <p>© 2021 Umesh Ramsaroop</p>
+    <!div class="contact-me">
+      <!h2>Get In Touch</h2>
+      <!p>Feel free to contact me. Always willing to work on a new project!</p>
+      <!a class="footer-link" href="https://www.linkedin.com/in/umesh-ramsaroop-71a55bb5/">LinkedIn</a>
+      <!a class="footer-link" href="https://twitter.com/jdm_ninja">Twitter</a>
+      <!a class="footer-link" href="https://www.instagram.com/iinfamous_r.py/">Instagram</a>
+      <!a class="btn" href="mailto:spamsohard1988@gmail.com">Email</a>
+      <!p>© 2021 Umesh Ramsaroop</p>
     </div>
-    >
   </div>
 
 </body>
